--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "packages": ["packages/*", "tools/*"],
-  "version": "0.0.0"
+  "packages": [
+    "packages/*",
+    "tools/*"
+  ],
+  "version": "0.1.0"
 }
