--- a/packages/eslint-plugin-gb/package.json
+++ b/packages/eslint-plugin-gb/package.json
@@ -12,9 +12,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/garyb432/eslint-plugin-gb.git",
-    "directory": "packages/eslint-plugin-gb"
+    "url": "https://github.com/garyb432/eslint-plugin-gb.git"
   },
+  "homepage": "https://github.com/GaryB432/eslint-plugin-gb/tree/master/packages/eslint-plugin-gb",
   "keywords": [
     "eslint",
     "eslintplugin",
