--- a/packages/eslint-plugin-gb/package.json
+++ b/packages/eslint-plugin-gb/package.json
@@ -25,7 +25,7 @@
   "main": "lib/index.js",
   "scripts": {
     "prebuild": "rimraf lib",
-    "build": "tsc --pretty",
+    "build": "tsc",
     "prepare": "npm run build"
   },
   "typings": "lib/index.d.ts",
