--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install -g lerna
       - run: npm install eslint-plugin-gb@latest -D
-      - run: lerna bootstrap --hoist
+      - run: npx lerna bootstrap --hoist
       - run: npm test -- --verbose
