--- a/package.json
+++ b/package.json
@@ -1,25 +1,45 @@
 {
-  "name": "root",
-  "private": true,
-  "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.3.1",
-    "jest-junit": "^13.0.0",
-    "lerna": "^4.0.0",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
-  },
+  "name": "eslint-plugin-gb",
+  "version": "2.0.0",
+  "license": "MIT",
   "scripts": {
-    "test": "jest",
-    "format": "prettier --write .",
-    "posttest": "eslint --ext ts ."
-  }
+    "build": "nx build",
+    "test": "nx test"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@nx/eslint-plugin": "16.10.0",
+    "@nx/js": "16.10.0",
+    "@nx/linter": "16.10.0",
+    "@nx/vite": "16.10.0",
+    "@nx/workspace": "16.10.0",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitest/coverage-c8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
+    "eslint": "~8.46.0",
+    "eslint-config-prettier": "8.1.0",
+    "nx": "16.10.0",
+    "prettier": "^2.6.2",
+    "typescript": "~5.1.3",
+    "vite": "~4.3.9",
+    "vitest": "~0.32.0"
+  },
+  "type": "commonjs",
+  "main": "./src/index.js",
+  "typings": "./src/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/garyb432/eslint-plugin-gb.git"
+  },
+  "homepage": "https://github.com/GaryB432/eslint-plugin-gb/tree/master/packages/eslint-plugin-gb",
+  "keywords": [
+    "eslint",
+    "eslintplugin",
+    "eslint-plugin",
+    "typescript"
+  ]
 }
