--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node-version: [14, 16, 18]
+        node-version: [16, 18, 20]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -24,5 +24,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npx nx run-many --targets test lint build --verbose --output-style=static --configuration=ci --graph=tmp/github-ci.json --nxBail
+      - run: npx nx run-many --targets test lint build --verbose --output-style=static --configuration=ci --graph=tmp/github-ci.json
       - run: cat tmp/github-ci.json
