--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "eslint-plugin-gb",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.3",
   "license": "MIT",
   "scripts": {
     "build": "nx build",
     "test": "nx test"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nx/eslint-plugin": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/linter": "16.10.0",
-    "@nx/vite": "16.10.0",
-    "@nx/workspace": "16.10.0",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/vite": "17.1.3",
+    "@nx/workspace": "17.1.3",
     "@types/node": "18.7.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/parser": "6.9.1",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
     "eslint": "~8.46.0",
-    "eslint-config-prettier": "8.1.0",
-    "nx": "16.10.0",
+    "eslint-config-prettier": "9.0.0",
+    "nx": "17.1.3",
     "prettier": "^2.6.2",
-    "typescript": "~5.1.3",
+    "typescript": "5.2.2",
     "vite": "~4.3.9",
-    "vitest": "~0.32.0"
+    "vitest": "~0.32.0",
+    "@nx/eslint": "17.1.3"
   },
   "type": "commonjs",
   "main": "./src/index.js",
