--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npx nx run-many --targets test lint build --verbose --output-style=static --configuration=ci --graph=tmp/github-ci.json
+      - run: npx nx run-many --targets lint build --verbose --output-style=static --configuration=ci --graph=tmp/github-ci.json
       - run: cat tmp/github-ci.json
