--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "eslintplugin",
     "eslint-plugin",
     "typescript"
-  ]
+  ],
+  "bugs": "https://github.com/GaryB432/eslint-plugin-gb/issues"
 }
