--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-gb",
-  "version": "9.0.0",
+  "version": "9.0.0-alpha.1",
   "description": "Eslint rules I like",
   "main": "index.js",
   "dependencies": {
