--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-gb",
-  "version": "9.0.0-alpha.6",
+  "version": "9.0.0",
   "description": "ESLint rules I like",
   "main": "index.js",
   "peerDependencies": {
