--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-gb",
-  "version": "9.0.0",
+  "version": "9.1.0-0",
   "description": "ESLint rules I like",
   "main": "index.js",
   "peerDependencies": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/GaryB432/eslint-plugin-gb.git"
   },
-  "type": "module",
+  "type": "commonjs",
   "keywords": [
     "eslint",
     "eslint-plugin",
