--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "9.1.0",
   "description": "ESLint rules I like",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "npx jest"
   },
