--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "eslint-plugin-gb",
-  "version": "9.1.0",
+  "version": "9.2.0-beta.1",
   "description": "ESLint rules I like",
   "main": "index.js",
-  "types": "index.d.ts",
-  "scripts": {
-    "test": "npx jest"
-  },
   "peerDependencies": {
     "eslint": "^9.9.0"
   },
@@ -14,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/GaryB432/eslint-plugin-gb.git"
   },
-  "type": "commonjs",
+  "type": "module",
   "keywords": [
     "eslint",
     "eslint-plugin",
@@ -29,8 +25,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "eslint": "^9.9.1",
-    "globals": "^15.9.0"
-  }
+    "@eslint/js": "^9.39.2"
+  },
+  "packageManager": "pnpm@10.25.0"
 }
