--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "eslint-plugin-gb",
-  "version": "9.2.0-beta.1",
+  "version": "9.2.1",
   "description": "ESLint rules I like",
   "main": "index.js",
+  "types": "index.d.ts",
   "peerDependencies": {
     "eslint": "^9.9.0"
   },
@@ -25,7 +26,8 @@
     "access": "public"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2"
+    "@eslint/js": "^9.39.2",
+    "globals": "^17.0.0"
   },
   "packageManager": "pnpm@10.25.0"
 }
